@@ -2,6 +2,7 @@ package devping.nnplanner.domain.monthmenu.service;
 
 import devping.nnplanner.domain.menucategory.entity.MenuCategory;
 import devping.nnplanner.domain.menucategory.repository.MenuCategoryRepository;
+import devping.nnplanner.domain.monthmenu.dto.request.MonthCountRequestDTO;
 import devping.nnplanner.domain.monthmenu.dto.request.MonthMenuAutoRequestDTO;
 import devping.nnplanner.domain.monthmenu.dto.request.MonthMenuSaveRequestDTO;
 import devping.nnplanner.domain.monthmenu.dto.request.MonthMenuSaveRequestDTO.MonthMenusSave;
@@ -12,19 +13,26 @@ import devping.nnplanner.domain.monthmenu.dto.response.MonthMenuPageResponseDTO;
 import devping.nnplanner.domain.monthmenu.dto.response.MonthMenuResponseDTO;
 import devping.nnplanner.domain.monthmenu.entity.MonthMenu;
 import devping.nnplanner.domain.monthmenu.entity.MonthMenuHospital;
+import devping.nnplanner.domain.monthmenu.entity.MonthMenuSchool;
 import devping.nnplanner.domain.monthmenu.repository.MonthMenuHospitalRepository;
 import devping.nnplanner.domain.monthmenu.repository.MonthMenuRepository;
+import devping.nnplanner.domain.monthmenu.repository.MonthMenuSchoolRepository;
 import devping.nnplanner.domain.openapi.entity.Food;
 import devping.nnplanner.domain.openapi.entity.HospitalMenu;
+import devping.nnplanner.domain.openapi.entity.SchoolInfo;
+import devping.nnplanner.domain.openapi.entity.SchoolMenu;
 import devping.nnplanner.domain.openapi.repository.FoodRepository;
 import devping.nnplanner.domain.openapi.repository.HospitalMenuRepository;
+import devping.nnplanner.domain.openapi.repository.SchoolInfoRepository;
+import devping.nnplanner.domain.openapi.repository.SchoolMenuRepository;
 import devping.nnplanner.global.exception.CustomException;
 import devping.nnplanner.global.exception.ErrorCode;
 import devping.nnplanner.global.jwt.user.UserDetailsImpl;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -43,22 +51,68 @@ public class MonthMenuService {
     private final HospitalMenuRepository hospitalMenuRepository;
     private final MenuCategoryRepository menuCategoryRepository;
     private final MonthMenuHospitalRepository monthMenuHospitalRepository;
+    private final SchoolMenuRepository schoolMenuRepository;
+    private final MonthMenuSchoolRepository monthMenuSchoolRepository;
+    private final SchoolInfoRepository schoolInfoRepository;
 
-    public List<MonthMenuAutoResponseDTO> createMonthMenuAuto(
+    public List<MonthMenuAutoResponseDTO> createHospitalMonthMenuAuto(
         MonthMenuAutoRequestDTO requestDTO) {
 
-        if (requestDTO.getMajorCategory().equals("병원")) {
+        switch (requestDTO.getMajorCategory()) {
+            case "병원" -> {
 
-            List<HospitalMenu> randomHospitalMenus =
-                hospitalMenuRepository.findRandomHospitalMenusByCategory(
-                    requestDTO.getMinorCategory(), requestDTO.getDayCount());
+                List<HospitalMenu> randomHospitalMenus =
+                    hospitalMenuRepository.findRandomHospitalMenusByCategory(
+                        requestDTO.getMinorCategory(), requestDTO.getDayCount());
 
-            return randomHospitalMenus.stream()
-                                      .map(MonthMenuAutoResponseDTO::new)
-                                      .collect(Collectors.toList());
+                return randomHospitalMenus.stream()
+                                          .map(menu -> {
+                                              MonthMenuAutoResponseDTO monthMenuAutoResponseDTO
+                                                  = new MonthMenuAutoResponseDTO();
+
+                                              monthMenuAutoResponseDTO.hospitalMenu(menu);
+
+                                              return monthMenuAutoResponseDTO;
+                                          })
+                                          .toList();
+            }
+            case "학교" -> {
+
+                List<SchoolMenu> randomSchoolMenus =
+                    schoolMenuRepository.findRandomSchoolMenusBySchoolKindName(
+                        requestDTO.getMinorCategory(), requestDTO.getDayCount());
+
+                return randomSchoolMenus.stream()
+                                        .map(menu -> {
+                                            MonthMenuAutoResponseDTO monthMenuAutoResponseDTO
+                                                = new MonthMenuAutoResponseDTO();
+
+                                            monthMenuAutoResponseDTO.schoolKindName(menu);
+
+                                            return monthMenuAutoResponseDTO;
+                                        })
+                                        .toList();
+
+            }
+            case "학교명" -> {
+
+                List<SchoolMenu> randomSchoolMenus =
+                    schoolMenuRepository.findRandomSchoolMenusBySchoolName(
+                        requestDTO.getMinorCategory(), requestDTO.getDayCount());
+
+                return randomSchoolMenus.stream()
+                                        .map(menu -> {
+                                            MonthMenuAutoResponseDTO monthMenuAutoResponseDTO
+                                                = new MonthMenuAutoResponseDTO();
+
+                                            monthMenuAutoResponseDTO.schoolName(menu);
+
+                                            return monthMenuAutoResponseDTO;
+                                        })
+                                        .toList();
+            }
+            default -> throw new CustomException(ErrorCode.BAD_REQUEST);
         }
-
-        return Collections.emptyList();
     }
 
     @Transactional
@@ -74,17 +128,18 @@ public class MonthMenuService {
         monthMenu.create(userDetails.getUser(), menuCategory, requestDTO.getMonthMenuName());
         monthMenuRepository.save(monthMenu);
 
-        if (requestDTO.getMajorCategory().equals("병원")) {
-            requestDTO.getMonthMenusSaveList().forEach(menuSaveDTO -> {
-                if (menuSaveDTO.getHospitalMenuId() != null) {
+        switch (requestDTO.getMajorCategory()) {
+            case "병원" -> requestDTO.getMonthMenusSaveList().forEach(menuSaveDTO -> {
+                if (menuSaveDTO.getMenuId() != null) {
 
                     HospitalMenu hospitalMenu =
                         hospitalMenuRepository
-                            .findById(UUID.fromString(menuSaveDTO.getHospitalMenuId()))
+                            .findById(UUID.fromString(menuSaveDTO.getMenuId()))
                             .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
 
                     MonthMenuHospital monthMenuHospital = new MonthMenuHospital();
-                    monthMenuHospital.create(menuSaveDTO.getMenuDate(), monthMenu, hospitalMenu);
+                    monthMenuHospital.create(menuSaveDTO.getMenuDate(), monthMenu,
+                        hospitalMenu);
                     monthMenuHospitalRepository.save(monthMenuHospital);
 
                 } else {
@@ -92,11 +147,67 @@ public class MonthMenuService {
                     HospitalMenu hospitalMenu = createHospitalMenu(requestDTO, menuSaveDTO);
 
                     MonthMenuHospital monthMenuHospital = new MonthMenuHospital();
-                    monthMenuHospital.create(menuSaveDTO.getMenuDate(), monthMenu, hospitalMenu);
+                    monthMenuHospital.create(menuSaveDTO.getMenuDate(), monthMenu,
+                        hospitalMenu);
                     monthMenuHospitalRepository.save(monthMenuHospital);
                 }
             });
-        }//TODO: majorCategory 별로 나눠서 저장해야함
+            case "학교" -> requestDTO.getMonthMenusSaveList().forEach(menuSaveDTO -> {
+
+                if (menuSaveDTO.getMenuId() != null) {
+
+                    SchoolMenu schoolMenu =
+                        schoolMenuRepository
+                            .findById(UUID.fromString(menuSaveDTO.getMenuId()))
+                            .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+
+                    MonthMenuSchool monthMenuSchool = new MonthMenuSchool();
+                    monthMenuSchool.create(menuSaveDTO.getMenuDate(), monthMenu, schoolMenu);
+                    monthMenuSchoolRepository.save(monthMenuSchool);
+
+                } else {
+
+                    SchoolInfo schoolInfo =
+                        schoolInfoRepository
+                            .findTop1BySchoolKindName(requestDTO.getMinorCategory())
+                            .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+
+                    SchoolMenu schoolMenu = createSchoolMenu(schoolInfo, menuSaveDTO);
+
+                    MonthMenuSchool monthMenuSchool = new MonthMenuSchool();
+                    monthMenuSchool.create(menuSaveDTO.getMenuDate(), monthMenu, schoolMenu);
+                    monthMenuSchoolRepository.save(monthMenuSchool);
+                }
+            });
+            case "학교명" -> requestDTO.getMonthMenusSaveList().forEach(menuSaveDTO -> {
+
+                if (menuSaveDTO.getMenuId() != null) {
+
+                    SchoolMenu schoolMenu =
+                        schoolMenuRepository
+                            .findById(UUID.fromString(menuSaveDTO.getMenuId()))
+                            .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+
+                    MonthMenuSchool monthMenuSchool = new MonthMenuSchool();
+                    monthMenuSchool.create(menuSaveDTO.getMenuDate(), monthMenu, schoolMenu);
+                    monthMenuSchoolRepository.save(monthMenuSchool);
+
+                } else {
+
+                    SchoolInfo schoolInfo =
+                        schoolInfoRepository
+                            .findBySchoolName(requestDTO.getMinorCategory())
+                            .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+
+                    SchoolMenu schoolMenu = createSchoolMenu(schoolInfo, menuSaveDTO);
+
+                    MonthMenuSchool monthMenuSchool = new MonthMenuSchool();
+                    monthMenuSchool.create(menuSaveDTO.getMenuDate(), monthMenu, schoolMenu);
+                    monthMenuSchoolRepository.save(monthMenuSchool);
+                }
+            });
+            default -> throw new CustomException(ErrorCode.BAD_REQUEST);
+        }
     }
 
     @Transactional(readOnly = true)
@@ -133,11 +244,22 @@ public class MonthMenuService {
                 monthMenuHospitalRepository.findAllByMonthMenu_MonthMenuId(monthMenuId);
 
             List<MonthFoodListResponseDTO> monthFoodListResponseDTOS =
-                createMonthFoodListResponseDTOS(monthMenuHospitalList);
+                createHospitalMonthFoodList(monthMenuHospitalList);
 
             return new MonthMenuResponseDTO(monthMenu, monthFoodListResponseDTOS);
+
+        } else if (monthMenu.getMenuCategory().getMajorCategory().equals("학교") ||
+            monthMenu.getMenuCategory().getMajorCategory().equals("학교명")) {
+
+            List<MonthMenuSchool> monthMenuSchoolList =
+                monthMenuSchoolRepository.findAllByMonthMenu_MonthMenuId(monthMenuId);
+
+            List<MonthFoodListResponseDTO> monthFoodListResponseDTOS =
+                createSchoolMonthFoodList(monthMenuSchoolList);
+
+            return new MonthMenuResponseDTO(monthMenu, monthFoodListResponseDTOS);
+
         } else {
-            //TODO: majorCategory 별로 나눠서 조회해야함
             throw new CustomException(ErrorCode.BAD_REQUEST);
         }
     }
@@ -163,7 +285,7 @@ public class MonthMenuService {
 
             requestDTO.getMonthMenusSaveList().forEach(menuSaveDTO -> {
 
-                if (menuSaveDTO.getHospitalMenuId() == null) {
+                if (menuSaveDTO.getMenuId() == null) {
 
                     MonthMenuHospital monthMenuHospital =
                         monthMenuHospitalRepository
@@ -192,11 +314,49 @@ public class MonthMenuService {
                 monthMenuHospitalRepository.findAllByMonthMenu_MonthMenuId(monthMenuId);
 
             List<MonthFoodListResponseDTO> monthFoodListResponseDTOS =
-                createMonthFoodListResponseDTOS(monthMenuHospitalList);
+                createHospitalMonthFoodList(monthMenuHospitalList);
 
             return new MonthMenuResponseDTO(monthMenu, monthFoodListResponseDTOS);
+
+        } else if (monthMenu.getMenuCategory().getMajorCategory().equals("학교") ||
+            monthMenu.getMenuCategory().getMajorCategory().equals("학교명")) {
+
+            requestDTO.getMonthMenusSaveList().forEach(menuSaveDTO -> {
+
+                if (menuSaveDTO.getMenuId() == null) {
+
+                    MonthMenuSchool monthMenuSchool =
+                        monthMenuSchoolRepository
+                            .findByMonthMenu_MonthMenuIdAndMenuDate(monthMenuId,
+                                menuSaveDTO.getMenuDate())
+                            .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+
+                    SchoolInfo schoolInfo = monthMenuSchool.getSchoolMenu().getSchoolInfo();
+
+                    monthMenuSchoolRepository.delete(monthMenuSchool);
+
+                    if (monthMenuSchool.getSchoolMenu().getCreatedBy() != null
+                        && !monthMenuSchool.getSchoolMenu().getCreatedBy().isEmpty()) {
+                        schoolMenuRepository.delete(monthMenuSchool.getSchoolMenu());
+                    }
+
+                    SchoolMenu schoolMenu = createSchoolMenu(schoolInfo, menuSaveDTO);
+
+                    MonthMenuSchool saveMonthMenuSchool = new MonthMenuSchool();
+                    saveMonthMenuSchool.create(menuSaveDTO.getMenuDate(), monthMenu, schoolMenu);
+                    monthMenuSchoolRepository.save(saveMonthMenuSchool);
+                }
+            });
+
+            List<MonthMenuSchool> monthMenuSchoolList =
+                monthMenuSchoolRepository.findAllByMonthMenu_MonthMenuId(monthMenuId);
+
+            List<MonthFoodListResponseDTO> monthFoodListResponseDTOS =
+                createSchoolMonthFoodList(monthMenuSchoolList);
+
+            return new MonthMenuResponseDTO(monthMenu, monthFoodListResponseDTOS);
+
         } else {
-            //TODO: majorCategory 별로 나눠서 업데이트 해야함
             throw new CustomException(ErrorCode.BAD_REQUEST);
         }
     }
@@ -229,14 +389,58 @@ public class MonthMenuService {
             });
 
             monthMenuRepository.delete(monthMenu);
+        } else if (monthMenu.getMenuCategory().getMajorCategory().equals("학교") ||
+            monthMenu.getMenuCategory().getMajorCategory().equals("학교명")) {
+
+            List<MonthMenuSchool> monthMenuSchoolList =
+                monthMenuSchoolRepository.findAllByMonthMenu_MonthMenuId(
+                    monthMenu.getMonthMenuId());
+
+            monthMenuSchoolList.forEach(monthMenuSchool -> {
+
+                SchoolMenu schoolMenu =
+                    schoolMenuRepository
+                        .findById(monthMenuSchool.getSchoolMenu().getSchoolMenuId())
+                        .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+
+                monthMenuSchoolRepository.delete(monthMenuSchool);
+
+                if (schoolMenu.getCreatedBy() != null) {
+                    schoolMenuRepository.delete(schoolMenu);
+                }
+            });
+
+            monthMenuRepository.delete(monthMenu);
+
+        } else {
+            throw new CustomException(ErrorCode.BAD_REQUEST);
         }
-        //TODO: 학교식단 삭제 구현해야함
     }
 
     @Transactional(readOnly = true)
-    public Integer countMonthMenu(UserDetailsImpl userDetails) {
+    public MonthCountRequestDTO countMonthMenu(UserDetailsImpl userDetails) {
 
-        return monthMenuRepository.countByUser_UserId(userDetails.getUser().getUserId());
+        Integer totalMonthCount =
+            monthMenuRepository.countByUser_UserId(userDetails.getUser().getUserId());
+
+        // 이번 달의 시작과 끝 날짜 구하기
+        LocalDate now = LocalDate.now();
+        LocalDate firstDayOfThisMonth = now.withDayOfMonth(1);
+        LocalDateTime startOfCurrentMonth = firstDayOfThisMonth.atStartOfDay();
+        LocalDateTime endOfCurrentMonth = now.plusMonths(1).withDayOfMonth(1).atStartOfDay();
+
+        // 저번 달의 시작과 끝 날짜 구하기
+        LocalDate firstDayOfLastMonth = now.minusMonths(1).withDayOfMonth(1);
+        LocalDateTime startOfLastMonth = firstDayOfLastMonth.atStartOfDay();
+        LocalDateTime endOfLastMonth = firstDayOfThisMonth.atStartOfDay();
+
+        Integer currentMonthCount = monthMenuRepository.countByUser_UserIdAndCreatedAtBetween(
+            userDetails.getUser().getUserId(), startOfCurrentMonth, endOfCurrentMonth);
+
+        Integer lastMonthCount = monthMenuRepository.countByUser_UserIdAndCreatedAtBetween(
+            userDetails.getUser().getUserId(), startOfLastMonth, endOfLastMonth);
+
+        return new MonthCountRequestDTO(totalMonthCount, currentMonthCount, lastMonthCount);
     }
 
     @Transactional(readOnly = true)
@@ -247,23 +451,56 @@ public class MonthMenuService {
         return foodPage.stream().map(FoodResponseDTO::new).toList();
     }
 
+    @Transactional(readOnly = true)
+    public MonthMenuPageResponseDTO searchMonthMenus(UserDetailsImpl userDetails,
+                                                     String majorCategory,
+                                                     String minorCategory,
+                                                     String menuName,
+                                                     Integer year,
+                                                     Integer month,
+                                                     Pageable pageable) {
+
+        Page<MonthMenu> monthMenuPage =
+            monthMenuRepository.searchByMenuNameOrDateAndCategory(
+                userDetails.getUser().getUserId(),
+                majorCategory,
+                minorCategory,
+                menuName,
+                year,
+                month,
+                pageable);
+
+        List<MonthMenuResponseDTO> menuResponseDTOS =
+            monthMenuPage.stream()
+                         .map(page -> new MonthMenuResponseDTO(page, null))
+                         .toList();
+
+        return new MonthMenuPageResponseDTO(
+            monthMenuPage.getNumber(),
+            monthMenuPage.getTotalPages(),
+            monthMenuPage.getTotalElements(),
+            monthMenuPage.getSize(),
+            menuResponseDTOS
+        );
+    }
+
     private HospitalMenu createHospitalMenu(MonthMenuSaveRequestDTO requestDTO,
                                             MonthMenusSave menusSave) {
 
         Food food1 = foodRepository.findById(UUID.fromString(menusSave.getFood1()))
-                                   .orElse(null);
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
         Food food2 = foodRepository.findById(UUID.fromString(menusSave.getFood2()))
-                                   .orElse(null);
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
         Food food3 = foodRepository.findById(UUID.fromString(menusSave.getFood3()))
-                                   .orElse(null);
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
         Food food4 = foodRepository.findById(UUID.fromString(menusSave.getFood4()))
-                                   .orElse(null);
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
         Food food5 = foodRepository.findById(UUID.fromString(menusSave.getFood5()))
-                                   .orElse(null);
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
         Food food6 = foodRepository.findById(UUID.fromString(menusSave.getFood6()))
-                                   .orElse(null);
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
         Food food7 = foodRepository.findById(UUID.fromString(menusSave.getFood7()))
-                                   .orElse(null);
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
 
         HospitalMenu hospitalMenu = HospitalMenu.builder()
                                                 .hospitalMenuKind(
@@ -282,26 +519,93 @@ public class MonthMenuService {
         return hospitalMenu;
     }
 
-    private List<MonthFoodListResponseDTO> createMonthFoodListResponseDTOS(
+    private SchoolMenu createSchoolMenu(SchoolInfo schoolInfo,
+                                        MonthMenusSave menusSave) {
+
+        Food food1 = foodRepository.findById(UUID.fromString(menusSave.getFood1()))
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+        Food food2 = foodRepository.findById(UUID.fromString(menusSave.getFood2()))
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+        Food food3 = foodRepository.findById(UUID.fromString(menusSave.getFood3()))
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+        Food food4 = foodRepository.findById(UUID.fromString(menusSave.getFood4()))
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+        Food food5 = foodRepository.findById(UUID.fromString(menusSave.getFood5()))
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+        Food food6 = foodRepository.findById(UUID.fromString(menusSave.getFood6()))
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+        Food food7 = foodRepository.findById(UUID.fromString(menusSave.getFood7()))
+                                   .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
+
+        SchoolMenu schoolMenu = new SchoolMenu();
+        schoolMenu.create(
+            schoolInfo,
+            food1,
+            food2,
+            food3,
+            food4,
+            food5,
+            food6,
+            food7
+        );
+
+        schoolMenuRepository.save(schoolMenu);
+
+        return schoolMenu;
+    }
+
+    private List<MonthFoodListResponseDTO> createHospitalMonthFoodList(
         List<MonthMenuHospital> monthMenuHospitalList) {
 
         return monthMenuHospitalList.stream().map(MHMenu -> {
 
             HospitalMenu hospitalMenu = MHMenu.getHospitalMenu();
 
-            List<FoodResponseDTO> foodList = Stream.of(
-                                                       hospitalMenu.getFood1(),
-                                                       hospitalMenu.getFood2(),
-                                                       hospitalMenu.getFood3(),
-                                                       hospitalMenu.getFood4(),
-                                                       hospitalMenu.getFood5(),
-                                                       hospitalMenu.getFood6(),
-                                                       hospitalMenu.getFood7()
-                                                   )
-                                                   .map(FoodResponseDTO::new)
-                                                   .toList();
+            List<FoodResponseDTO> foodList =
+                Stream.of(
+                          hospitalMenu.getFood1(),
+                          hospitalMenu.getFood2(),
+                          hospitalMenu.getFood3(),
+                          hospitalMenu.getFood4(),
+                          hospitalMenu.getFood5(),
+                          hospitalMenu.getFood6(),
+                          hospitalMenu.getFood7()
+                      )
+                      .map(FoodResponseDTO::new)
+                      .toList();
 
-            return new MonthFoodListResponseDTO(MHMenu, foodList);
+            MonthFoodListResponseDTO monthFoodListResponseDTO = new MonthFoodListResponseDTO();
+            monthFoodListResponseDTO.monthMenuHospital(MHMenu, foodList);
+
+            return monthFoodListResponseDTO;
         }).toList();
+    }
+
+    private List<MonthFoodListResponseDTO> createSchoolMonthFoodList(
+        List<MonthMenuSchool> monthMenuSchoolList) {
+
+        return monthMenuSchoolList
+            .stream().map(monthMenuSchool -> {
+
+                List<FoodResponseDTO> foodList =
+                    Stream.of(
+                              monthMenuSchool.getSchoolMenu().getFood1(),
+                              monthMenuSchool.getSchoolMenu().getFood2(),
+                              monthMenuSchool.getSchoolMenu().getFood3(),
+                              monthMenuSchool.getSchoolMenu().getFood4(),
+                              monthMenuSchool.getSchoolMenu().getFood5(),
+                              monthMenuSchool.getSchoolMenu().getFood6(),
+                              monthMenuSchool.getSchoolMenu().getFood7()
+                          )
+                          .map(FoodResponseDTO::new)
+                          .toList();
+
+                MonthFoodListResponseDTO monthFoodListResponseDTO = new MonthFoodListResponseDTO();
+                monthFoodListResponseDTO.monthMenuSchool(monthMenuSchool,
+                    foodList);
+
+                return monthFoodListResponseDTO;
+            })
+            .toList();
     }
 }
